nbv_code/ros2_ws2/log/build_2024-11-03_19-00-19/my_robot_nbv/stderr.log
  File "/home/jajayu/TomatoHarvesting_NextBestView/nbv_code/ros2_ws2/install/my_robot_nbv/lib/python3.10/site-packages/my_robot_nbv/nbv_tompcd_filter.py", line 118
    filtered_points = []    #想要留下的那些point data
    ^^^^^^^^^^^^^^^
SyntaxError: expected 'except' or 'finally' block

